# django-fsspec

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  TODO.md  pixi.toml  pyproject.toml  tox.ini
.github/workflows/: test.yml
django_fsspec/: __init__.py  fsspec_storage.py  nested_fs.py  permissions.py  transparent_fs.py  utils.py
docs/superpowers/plans/: 2026-05-01-cp-mv-verification.md
tests/: conftest.py  test_fsspec_storage.py  test_nested_fs.py  test_transparent_fs.py  test_utils.py  test_with_s3.py  urls.py
tests/test_app/: models.py  urls.py  views.py
